:sparkles: Correctly Scrollbar in Friend Activity

--- a/src/styles/contentResult.css
+++ b/src/styles/contentResult.css
@@ -32,7 +32,6 @@
 
 .contentSpace {
   padding: 10px;
-  width: 100%;
 }
 
 .sectionCards {
