--- a/src/styles/friendsActivity.css
+++ b/src/styles/friendsActivity.css
@@ -15,7 +15,7 @@
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
-  padding: 12px 15px 0;
+  padding: 0 15px;
   width: 250px;
 }
 
